Implement Announcement GUI management and update documentation
- Refactor `AnnouncementManagerService` to support CRUD operations and UI integration
- Implement `AnnouncementPanelPage` and `AnnouncementEditPage` for in-game management
- Add UI templates: `AnnouncementPanel.ui`, `AnnouncementEdit.ui`, and `AnnouncementItem.ui`
- Register announcement subcommands: `list`, `create`, `delete`, `edit`, `reload`
- Update `PlayerListener` to display world-specific titles on join
- Add `deployPlugin` Gradle task for local deployment
- Refactor `Log` utility to support unit testing
- Extensive update to API documentation in `docs/` and remove `AGENTS.md`